Eclipse 4.13 (M3) JDT Patch for Groovy-Eclipse: JDT commit 3635add
#918